# bazalt

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: buildah-build-boost.yml  buildah-build-devel.yml  buildah-build-protobuf.yml  buildah-build-zenoh.yml  retention.yml
cmake/: utils.cmake
containers/: Makefile
containers/bazalt-boost/: Dockerfile
containers/bazalt-devel/: Dockerfile
containers/bazalt-protobuf/: Dockerfile
containers/bazalt-zenoh/: Dockerfile
containers/etc/zenohd/: zenohd.json5
containers/scripts/: boost-source-cmake-install.sh  boost-source-git-install.sh  flatbuffers-source-install.sh  iceoryx2-source-install.sh  protobuf-3-source-install.sh  protobuf-6.31.1.patch  protobuf-install.sh  protobuf-patch.3.21.12  protobuf-patch.6.31.1  protobuf-source-install.sh  rustup-install.sh  spdlog-install.sh  zenoh-c-install.sh  zenoh-c-source-install.sh  zenoh-cpp-install.sh  zenoh-cpp-source-install.sh  zenoh-pico-download.sh  zenoh-pico-install.sh
containers/systemd/system/: zenohd.service
containers/zenoh-pico-devel/: Dockerfile
examples/logger-test/: CMakeLists.txt  main.c
include/bazalt/: bazalt.h  logging.h  tomlconf.h
src/bazalt/: bazalt.c  logging.c  tomlconf.c
src/bazalt/internal/: common.h  getopt.h
systemd/system/: bazalt-launch.target
